add option to ignore exceptions subclassing others

--- a/platform/platform-resources-en/src/messages/InspectionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/InspectionsBundle.properties
@@ -584,6 +584,7 @@ inspection.filter.show.diff.action.text=Show diff
 inspection.duplicate.throws.display.name=Duplicate throws
 inspection.duplicate.throws.problem=Duplicate throws
 inspection.duplicate.throws.more.general.problem=There is a more general exception, ''{0}'', in the throws list already.
+inspection.duplicate.throws.ignore.subclassing.option=Ignore exceptions subclassing others
 inspection.filter.show.diff.only.action.text=Show diff only
 inspection.new.profile.ide.to.project.warning.message=Do you want to save selected IDE profile as project profile?
 inspection.new.profile.ide.to.project.warning.title=Unable to set up IDE profile for scope
