add option to ignore any exceptions which hide other exceptions (IDEA-91755)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1826,6 +1826,7 @@ overly.broad.throws.clause.problem.descriptor1=<code>throws #ref</code> is too b
 overly.broad.throws.clause.problem.descriptor2=<code>throws #ref</code> is too broad, masking exceptions ''{0}'' and ''{1}'' #loc
 overly.broad.throws.clause.quickfix1=Add specific exceptions
 overly.broad.throws.clause.quickfix2=Replace with specific exceptions
+overly.broad.throws.clause.ignore.thrown.option=Ignore exceptions which &hide others but are themselves thrown
 unnecessarily.qualified.statically.imported.element.display.name=Unnecessarily qualified statically imported element
 unnecessarily.qualified.statically.imported.element.problem.descriptor=Statically imported element ''{0}'' is unnecessarily qualified with <code>#ref</code> #loc
 unnecessarily.qualified.statically.imported.element.quickfix=Remove unnecessary qualifier
