--- a/plugins/maven/src/main/resources/META-INF/plugin.xml
+++ b/plugins/maven/src/main/resources/META-INF/plugin.xml
@@ -26,7 +26,17 @@
     <applicationService serviceImplementation="org.jetbrains.idea.maven.indices.MavenIndicesManager"/>
     <applicationService serviceImplementation="org.jetbrains.idea.maven.services.MavenRepositoryServicesManager"/>
 
-    <projectConfigurable instance="org.jetbrains.idea.maven.utils.MavenSettings" order="last"/>
+    <projectConfigurable instance="org.jetbrains.idea.maven.utils.MavenSettings" id="MavenSettings" displayName="Maven" order="last">
+      <configurable instance="org.jetbrains.idea.maven.project.MavenImportingConfigurable" id="reference.settings.project.maven.importing"
+                    key="maven.tab.importing" bundle="ProjectBundle"/>
+      <configurable instance="org.jetbrains.idea.maven.project.MavenIgnoredFilesConfigurable"
+                    id="reference.settings.project.maven.ignored.files" key="maven.tab.ignored.files" bundle="ProjectBundle"/>
+      <configurable instance="org.jetbrains.idea.maven.utils.MavenSettings$MyMavenRunnerConfigurable"
+                    id="reference.settings.project.maven.runner" key="maven.tab.runner" bundle="RunnerBundle"/>
+      <configurable instance="org.jetbrains.idea.maven.indices.MavenRepositoriesConfigurable"
+                    id="reference.settings.project.maven.repository.indices" key="maven.repositories.title" bundle="IndicesBundle"
+                    nonDefaultProject="true"/>
+    </projectConfigurable>
 
     <stepsBeforeRunProvider implementation="org.jetbrains.idea.maven.tasks.MavenBeforeRunTasksProvider"/>
     <keymapExtension implementation="org.jetbrains.idea.maven.tasks.MavenKeymapExtension"/>
