--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -317,17 +317,20 @@ package.visible.field.problem.descriptor=Package-visible field <code>#ref</code>
 package.visible.inner.class.display.name=Package-visible inner class
 package.visible.inner.class.problem.descriptor=Package-visible inner class <code>#ref</code> #loc
 package.visible.inner.class.ignore.enum.option=Ignore package-visible inner enums
+package.visible.inner.class.ignore.interface.option=Ignore package-visible inner interfaces
 protected.field.display.name=Protected field
 protected.field.problem.descriptor=Protected field <code>#ref</code> #loc
 protected.inner.class.display.name=Protected inner class
 protected.inner.class.problem.descriptor=Protected inner class <code>#ref</code> #loc
 protected.inner.class.ignore.enum.option=Ignore 'protected' inner enums
+protected.inner.class.ignore.interface.option=Ignore 'protected' inner interfaces
 public.field.display.name='public' field
 public.field.problem.descriptor='public' field <code>#ref</code> #loc
 public.field.ignore.enum.type.fields.option=Ignore 'public final' fields of an enum type
 public.inner.class.display.name='public' inner class
 public.inner.class.problem.descriptor='public' inner class <code>#ref</code> #loc
 public.inner.class.ignore.enum.option=Ignore 'public' inner enums
+public.inner.class.ignore.interface.option=Ignore 'public' inner interfaces
 return.of.collection.array.field.display.name=Return of Collection or array field
 return.of.collection.array.field.problem.descriptor.array='return' of array field <code>#ref</code> #loc
 return.of.collection.array.field.problem.descriptor.collection='return' of Collection field <code>#ref</code> #loc
