IDEA-91717 (Class extends utility class inspection shall ignore utility classes)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1572,6 +1572,7 @@ constant.string.intern.problem.descriptor=<code>.#ref()</code> on compile-time c
 constant.string.intern.quickfix=Remove '.intern()'
 class.extends.utility.class.display.name=Class extends utility class
 class.extends.utility.class.problem.descriptor=Class <code>#ref</code> extends utility class ''{0}'' #loc
+class.extends.utility.class.ignore.utility.class.option=Ignore if overriding class is a utility class
 public.constructor.in.non.public.class.quickfix=Make constructor ''{0}''
 assignment.to.method.parameter.ignore.transformation.option=<html>Ignore if assignment is a transformation of the original parameter</html>
 type.parameter.extends.final.class.display.name=Type parameter extends final class
