IDEA-85796 shortcut for generating javadoc
'Generate doc comment' is supported for java and groovy

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -344,6 +344,8 @@ action.ShowFilePath.text=File _Path
 action.ShowFilePath.description=Popup path of the current file for opening in external file manager
 action.SelectIn.text=Se_lect In...
 action.SelectIn.description=Select the current class or method in any view
+action.FixDocComment.text=Fix doc comment
+action.FixDocComment.description=Generate or fix doc comment for the current context
 action.QuickJavaDoc.text=Quick _Documentation
 action.QuickJavaDoc.description=Show a popup window with documentation for the symbol at caret
 action.QuickImplementations.text=Quic_k Definition
