IDEA-91839 Groovy: 'Remove unnecessary return' intention

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -178,3 +178,5 @@ remove.redundant.class.property.intention.name=Remove redundant .class
 remove.redundant.class.property.intention.family.name=Remove redundant .class
 convert.simple.getter.to.property.intention.name=Convert to property
 convert.simple.getter.to.property.intention.family.name=Convert simple getter to property
+remove.unnecessary.return.intention.name=Remove 'return' keyword
+remove.unnecessary.return.intention.family.name=Remove unnecessary 'return' keyword
