nullable: move report null values passed to non annotated params under @Nullable suggestion

--- a/platform/platform-resources-en/src/messages/InspectionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/InspectionsBundle.properties
@@ -45,7 +45,7 @@ inspection.annotate.method.quickfix.name=Annotate method as ''@{0}''
 
 #dataflow
 inspection.data.flow.display.name=Constant conditions \\& exceptions
-inspection.data.flow.nullable.quickfix.option=<html><body>Suggest @Nullable annotation for methods that may possibly return null</body></html>
+inspection.data.flow.nullable.quickfix.option=<html><body>Suggest @Nullable annotation for methods that may possibly return null and <br>report nullable values passed to non-annotated parameters</body></html>
 inspection.data.flow.true.asserts.option=<html><body>Don't report assert statements with condition statically proven to be always <code>true</code></body></html>
 inspection.data.flow.redundant.instanceof.quickfix=Replace with != null
 inspection.data.flow.simplify.boolean.expression.quickfix=Simplify Boolean Expression
@@ -114,7 +114,6 @@ inspection.nullable.problems.display.name=@NotNull/@Nullable problems
 inspection.nullable.problems.method.overrides.notnull.option=<html>report @NotNull &parameter overrides @Nullable and <br>@Nullable method overrides @NotNull</html>
 inspection.nullable.problems.method.overrides.option=report non-&annotated parameter or method overrides @NotNull
 inspection.nullable.problems.not.annotated.getters.for.annotated.fields=report non-annotated &setter parameter or getter of annotated fields
-inspection.nullable.problems.non.annotated.passed.null=report &null passed to non-annotated parameter
 inspection.nullable.problems.annotation.not.propagated=report @NotNull not propagated to ove&rridden methods
 
 #problem descriptor messages
