--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -166,6 +166,7 @@ action.GenerateSetUpMethod.text=SetUp Method
 action.GenerateTearDownMethod.text=TearDown Method
 action.GenerateDataMethod.text=Parameters Method
 action.GenerateConstructor.text=Constructor
+action.GenerateCreateUI.text=createUI(...)
 action.GenerateGetter.text=Getter
 action.GenerateSetter.text=Setter
 action.GenerateGetterAndSetter.text=Getter and Setter
