IDEA-91956 Darcula on Mac: Password field has incorrect background

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula.properties
@@ -48,6 +48,11 @@ Focus.color=ff0000
 TextField.background=535353
 TextField.foreground=eeeeee
 TextField.caretForeground=eeeeee
+#TextFieldUI=com.intellij.ide.ui.laf.darcula.ui.DarculaTextFieldUI
+
+PasswordField.background=535353
+PasswordField.foreground=eeeeee
+PasswordField.caretForeground=eeeeee
 
 TextArea.background=535353
 TextArea.foreground=eeeeee
