Rename inspection to "Unclear expression" and report more cases.

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1956,7 +1956,7 @@ properties.object.as.hashtable.get.quickfix=Replace with call to 'getProperty()'
 ignored.junit.test.display.name=JUnit test annotated with '@Ignore'
 ignored.junit.test.classproblem.descriptor=Test class ''{0}'' annotated with <code>#ref</code> #loc
 ignored.junit.test.method.problem.descriptor=Test method ''{0}()'' annotated with <code>#ref</code> #loc
-unclear.binary.expression.display.name=Unclear binary expression
+unclear.binary.expression.display.name=Unclear expression
 unclear.binary.expression.problem.descriptor=Expression could use clarifying parentheses #loc
 unclear.binary.expression.quickfix=Add clarifying parentheses
 new.exception.without.arguments.display.name=Exception constructor called without arguments
@@ -2007,3 +2007,4 @@ non.final.utility.class.problem.descriptor=Utility class <code>#ref</code> is no
 0.will.have.incompatible.access.privileges.with.super.1={0} will have incompatible access privileges with super {1}
 0.will.no.longer.be.visible.from.overriding.1={0} will no longer be visible from overriding {1}
 make.private.quickfix=Make 'private'
+ignore.throwable.classes.option=Ignore 'Throwable' classes
