IDEA-87530 Reuse Github credentials for Git over http
* Introduce extension point GitHttpAuthDataProvider to provide user name and password.
* Implement it in the GitHub plugin: check if the url is a GitHub url, and provide username and password from GitHub settings.
* In GitHttpAdapter check if any provider has returned a value, and use it in attempt to access github http remote.
* Move AuthData to the util package.

--- a/plugins/git4idea/src/META-INF/plugin.xml
+++ b/plugins/git4idea/src/META-INF/plugin.xml
@@ -158,4 +158,9 @@
     <ComponentRoamingType component="Git.Settings" type="DISABLED"/>
     <fileTypeFactory implementation="git4idea.vfs.GitFileTypeFactory"/>
   </extensions>
+
+  <extensionPoints>
+    <extensionPoint qualifiedName="Git4Idea.GitHttpAuthDataProvider" interface="git4idea.jgit.GitHttpAuthDataProvider"/>
+  </extensionPoints>
+
 </idea-plugin>
