Groovy 'Method can be static' option 'ignore instance references inside closures'

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
@@ -92,3 +92,5 @@ other.scope=Other scope
 method.may.be.static=Method may be static
 method.may.be.static.only.private.or.final.option=Only check final or private methods
 method.may.be.static.ignore.empty.method.option=Ignore empty methods
+have.instance.refs.in.closure=(have instance references inside closure)
+method.may.be.static.ignore.instance.refs.in.closure.option=Ignore instance references inside closures
