IDEA-90066 intention for alias import of static member

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -180,3 +180,5 @@ convert.simple.getter.to.property.intention.name=Convert to property
 convert.simple.getter.to.property.intention.family.name=Convert simple getter to property
 remove.unnecessary.return.intention.name=Remove 'return' keyword
 remove.unnecessary.return.intention.family.name=Remove unnecessary 'return' keyword
+gr.alias.import.intention.name=Alias import
+gr.alias.import.intention.family.name=Alias import statically imported member
