External Tools Settings: better usability

--- a/platform/platform-resources-en/src/messages/ToolsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ToolsBundle.properties
@@ -27,7 +27,9 @@ tools.name.label=Name:
 tools.group.label=Group:
 tools.description.label=Description:
 tools.filters.button=Output &Filters...
+tools.add.title=Create Tool
 tools.edit.title=Edit Tool
+tools.copy.title=Copy Tool
 tools.program.label=Program:
 tools.insert.macro.button=Insert &macro...
 tools.parameters.label=Parameters:
