log when a change list with an empty name is created

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -267,3 +267,5 @@ remote.changelist.management.available=false
 python.import.always.ask=false
 introduce.variable.prefer.statements=false
 show.method.base.class.in.java.file.structure=true
+
+vcs.log.empty.change.list.creation=false
