method ref: spaces around dbl colon

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -561,3 +561,4 @@ arrangement.action.rule.add.description=Add new arrangement rule
 arrangement.action.rule.remove.text=Remove rule
 arrangement.action.rule.remove.description=Remove selected arrangement rule
 checkbox.spaces.around.lambda.arrow=Lambda arrow
+checkbox.spaces.around.method.ref.dbl.colon.arrow=Method reference double colon
