IDEA-19061 Integrate the Rearranger-plugin into core-IDE
Grouping rules UI

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -560,5 +560,15 @@ arrangement.action.rule.add.text=Add rule
 arrangement.action.rule.add.description=Add new arrangement rule
 arrangement.action.rule.remove.text=Remove rule
 arrangement.action.rule.remove.description=Remove selected arrangement rule
+arrangement.settings.section.groups=Grouping rules
+arrangement.settings.section.match=Matching rules
+arrangement.settings.groups.dependent.methods=Keep dependent methods together
+arrangement.settings.groups.overridden.methods=Keep overridden methods together
+arrangement.settings.groups.getters.and.setters.together=Keep getters and setters together
+arrangement.settings.order.type.keep=Keep
+arrangement.settings.order.type.by.name=By name
+arrangement.settings.order.type.depth.first=Depth-first
+arrangement.settings.order.type.breadth.first=Breadth-first
+
 checkbox.spaces.around.lambda.arrow=Lambda arrow
 checkbox.spaces.around.method.ref.dbl.colon.arrow=Method reference double colon
