Project Templates: initial

--- a/platform/projectModel-impl/src/messages/ProjectBundle.properties
+++ b/platform/projectModel-impl/src/messages/ProjectBundle.properties
@@ -402,6 +402,9 @@ project.new.wizard.import.title=Import {0} from external &model
 project.new.wizard.import.description=<html>Create {0} {1} from external model ({2})</html>
 project.new.wizard.from.existent.sources.title=Create {0} from &existing sources
 project.new.wizard.from.existent.sources.description=<html>Create {0} {1} structure over existing sources</html>
+project.new.wizard.from.template.title=Create {0} from &template
+project.new.wizard.from.template.description=<html>Create {0} with pre-defined support for your favourite framework/technology</html>
+
 project.new.wizard.module.name.title=Module na&me:
 project.new.wizard.module.root.title=Content &root:
 project.new.wizard.module.file.title=Module &file location:
