--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -182,3 +182,5 @@ remove.unnecessary.return.intention.name=Remove 'return' keyword
 remove.unnecessary.return.intention.family.name=Remove unnecessary 'return' keyword
 gr.alias.import.intention.name=Alias import
 gr.alias.import.intention.family.name=Alias import statically imported member
+gr.copy.string.concatenation.content.intention.name=Copy string concatenation text to clipboard
+gr.copy.string.concatenation.content.intention.family.name=Copy string concatenation text to clipboard
