IDEA-19061 Integrate the Rearranger-plugin into core-IDE
Grouping rules UI

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -565,10 +565,11 @@ arrangement.settings.section.match=Matching rules
 arrangement.settings.groups.dependent.methods=Keep dependent methods together
 arrangement.settings.groups.overridden.methods=Keep overridden methods together
 arrangement.settings.groups.getters.and.setters.together=Keep getters and setters together
-arrangement.settings.order.type.keep=Keep
-arrangement.settings.order.type.by.name=By name
-arrangement.settings.order.type.depth.first=Depth-first
-arrangement.settings.order.type.breadth.first=Breadth-first
+arrangement.settings.order.type.keep=keep
+arrangement.settings.order.type.by.name=by name
+arrangement.settings.order.type.depth.first=depth-first
+arrangement.settings.order.type.breadth.first=breadth-first
+arrangement.settings.label.order=order
 
 checkbox.spaces.around.lambda.arrow=Lambda arrow
 checkbox.spaces.around.method.ref.dbl.colon.arrow=Method reference double colon
