--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -184,3 +184,9 @@ gr.alias.import.intention.name=Alias import
 gr.alias.import.intention.family.name=Alias import statically imported member
 gr.copy.string.concatenation.content.intention.name=Copy string concatenation text to clipboard
 gr.copy.string.concatenation.content.intention.family.name=Copy string concatenation text to clipboard
+gr.make.member.private.intention.name=Make 'private'
+gr.make.member.private.intention.family.name=Make 'private'
+gr.make.member.public.intention.name=Make 'public'
+gr.make.member.public.intention.family.name=Make 'public'
+gr.make.member.protected.intention.name=Make 'protected'
+gr.make.member.protected.intention.family.name=Make 'protected'
