IDEA-90038 Make Github plugin dependency on Tasks plugin to be optional
Move GitHub task server implementation from tasks to github.
Connect it via optional github-tracker.xml extension.

--- a/plugins/github/src/META-INF/plugin.xml
+++ b/plugins/github/src/META-INF/plugin.xml
@@ -6,7 +6,7 @@
 
   <depends>com.intellij.modules.lang</depends>
   <depends>Git4Idea</depends>
-  <depends>com.intellij.tasks</depends>
+  <depends optional="true" config-file="github-tracker.xml">com.intellij.tasks</depends>
 
   <extensions defaultExtensionNs="com.intellij">
     <errorHandler implementation="com.intellij.diagnostic.ITNReporter"/>
