IDEA-92072 'Revert' and 'Branches' actions need "..." in the name (VCS popup)
Forgot to fix revert in git plugin, not only in the common actions.
Also remove the text attribute from the action descriptor, since it is overwritten and not used anywhere.

--- a/plugins/git4idea/src/META-INF/plugin.xml
+++ b/plugins/git4idea/src/META-INF/plugin.xml
@@ -31,7 +31,7 @@
       <reference ref="Vcs.ShowTabbedFileHistory"/>
       <reference id="Vcs.ShowHistoryForBlock"/>
       <separator/>
-      <action id="Git.Revert" class="git4idea.actions.GitRevert" text="Revert File" icon="AllIcons.Actions.Rollback"/>
+      <action id="Git.Revert" class="git4idea.actions.GitRevert" icon="AllIcons.Actions.Rollback"/>
       <action id="Git.ResolveConflicts" class="git4idea.actions.GitResolveConflictsAction" text="Resolve Conflicts..."/>
     </group>
 
