IDEA-19061 Integrate the Rearranger-plugin into core-IDEA
Adding 'move rule up/down' actions

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -560,6 +560,10 @@ arrangement.action.rule.add.text=Add rule
 arrangement.action.rule.add.description=Add new arrangement rule
 arrangement.action.rule.remove.text=Remove rule
 arrangement.action.rule.remove.description=Remove selected arrangement rule
+arrangement.action.rule.move.up.text=Move up
+arrangement.action.rule.move.up.description=Move selected arrangement rule up
+arrangement.action.rule.move.down.text=Move down
+arrangement.action.rule.move.down.description=Move selected arrangement rule down
 arrangement.settings.section.groups=Grouping rules
 arrangement.settings.section.match=Matching rules
 arrangement.settings.groups.dependent.methods=Keep dependent methods together
