IDEA-87019 Incorrect assistance in groovy: Variable 'channel' might not be assigned

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
@@ -94,3 +94,4 @@ method.may.be.static.only.private.or.final.option=Only check final or private me
 method.may.be.static.ignore.empty.method.option=Ignore empty methods
 have.instance.refs.in.closure=(have instance references inside closure)
 method.may.be.static.ignore.instance.refs.in.closure.option=Ignore instance references inside closures
+ignore.boolean.expressions=Ignore unassigned variables in boolean checks
