IDEA-78830 Convert between single-line and multi-line string intention

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -190,3 +190,5 @@ gr.make.member.public.intention.name=Make 'public'
 gr.make.member.public.intention.family.name=Make 'public'
 gr.make.member.protected.intention.name=Make 'protected'
 gr.make.member.protected.intention.family.name=Make 'protected'
+convert.multiline.string.to.single.line.intention.name=Convert to single-line
+convert.multiline.string.to.single.line.intention.family.name=Convert multiline string to single-line
