--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -331,3 +331,4 @@ method.has.incorrect.modifier.volatile=Method has incorrect modifier 'volatile'
 native.methods.cannot.have.body=Native methods cannot have body
 top.level.class.maynot.have.private.modifier=Top level class may not have 'private' modifier
 top.level.class.maynot.have.protected.modifier=Top level class may not have 'protected' modifier
+property.missing=propertyMissing
