--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/actions/generate/GroovyCodeInsightBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/actions/generate/GroovyCodeInsightBundle.properties
@@ -3,3 +3,5 @@ generate.equals.and.hashcode.already.defined.warning=equals() and hashCode() alr
 generate.equals.and.hashcode.already.defined.title=equals() and hashCode() Already Defined
 generate.equals.compare.nested.arrays.comment= // Compare nested arrays - values of {0} here
 generate.equals.compare.arrays.comment= // Probably incorrect - comparing Object[] arrays with Arrays.equals
+generate.property.missing.already.defined.warning=propertyMissing() already defined
+generate.property.missing.already.defined.title=propertyMissing() Already Defined
